Changes
=======

2.5.6 (27/01/2011)
------------------

* Move CSV file format description to the top.
  [timo]
  
* CSV export added.
  [timo]
  
* Use TextAreaWidget for the newsletter template body.
  [timo]
  
* Fix/refactor/rewrite CSV import.
  [timo]

* Fix CSV-Import format description.
  [timo]

* Link to subscriber import added.
  [timo]


2.5.5 (26/01/2011)
------------------

 * remove unneeded dependency to BeautifulSoup [derstappenit]


2.5.4 (11/01/2011)
------------------

 * fix schema of EasyNewsletter and ENLIssues, use copy to create a schema based on ATTopicSchema [derstappenit]


2.5.3 (07/01/2011)
------------------

 * fix issue view, now it looks mostly like the html newsletter version
   in your mail client [derstappenit]


2.5.2 (06/01/2011)
------------------

 * add salutation to ENLSubscriber [derstappenit]

 * EasyNewsletter and subscriber portlet [derstappenit]

 * make name and salutation optinal in subscriber portlet [derstappenit]
 
 * remove filter in get_public_body, because we want the look of the public view mostly like in the sended mails [derstappenit]

 * optimize issue_send_form to make it more failsave [derstappenit]
 
 * refacturer the handling of placeholders for salutation and unsubscribelink [derstappenit]
 
 * reinclude header and footer in mails [derstappenit]
 
 * fix MultipartMessage-handling, now text and html messages parts have all images includet [derstappenit]

 * cleanup archetypes schematas of EasyNewsletter and ENLIssue [derstappenit]

 * add many german translations [derstappenit]


2.5.1 (2010/11/30)
------------------

 * added CSV import (to upload_csv.pt, subscribers.py)
   you have to append '@@upload_csv' to your newsletter url to call this page.
   the csv file must look like this (email is required)::

    "fullname","email","organization"
    "John Doe","john.doe@yahoo.com","ACME Corp."
    "","admin@plone.org",""

   [nan]


2.5.0 (2010/11/26)
--------------------

 * final release

